# neuron_dance

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md
saved_models/: csv1-network-dump.txt  diab-hypers-dump.txt  diab-network-dump.txt  fash-hypers-dump.txt  fash-network-dump.txt  iris-hypers-dump.txt  iris-network-dump.txt  mnist-hypers-dump.txt  mnist-network-dump.txt  temp-hypers-dump.txt  temp-network-dump.txt
src/: activation.rs  algebra.rs  archive.rs  cache_computation.rs  chain_layer.rs  chain_rule.rs  computation.rs  cost.rs  dataset.rs  error.rs  gradient.rs  gradient_cache.rs  gradient_stack.rs  hypers.rs  layers.rs  lib.rs  main.rs  metrics.rs  network.rs  one_hot.rs  optimizer.rs  pool.rs  save.rs  term_cache.rs  term_stack.rs  types.rs  visualize.rs  weight.rs
src/activation/: functions.rs  leaky_relu.rs  relu.rs  sigmoid.rs  softmax.rs  tanh.rs
src/activation/functions/: leaky_relu.rs  relu.rs  sigmoid.rs  softmax.rs  tanh.rs
src/cost/: binary_cross_entropy.rs  categorical_cross_entropy.rs  cross_entropy.rs  functions.rs  quadratic.rs
src/cost/functions/: cross_entropy.rs  quadratic.rs
src/dataset/: csv.rs  idx.rs
src/optimizer/: adam.rs  amsgrad.rs  nadam.rs
