[package]
name = "simple_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
csv = "1.3.0"
flate2 = "1.0.28"
ndarray = "0.15.6"
ndarray-csv = "0.5.2"
ndarray-rand = "0.14.0"
rand = "0.8.5"
rand_isaac = "0.3.0"
statrs = "0.16"