[package]
name = "simple_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
csv = "1.3.0"
flate2 = "1.0.28"

# For faster matrix compute, include optional feature blas
# Installing blas required cmake and gfortran
# e.g. sudo apt install cmake,  sudo apt install gfortran
ndarray = { version = "0.15.6", features = ["blas"] }
blas-src = { version = "0.8.0", default-features = false, features = ["netlib"] }

ndarray-csv = "0.5.2"
ndarray-rand = "0.14.0"
rand = "0.8.5"
rand_isaac = "0.3.0"
statrs = "0.16"
either = "1.10.0"
