[package]
name = "neuron_dance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
csv = "1.3.0"
flate2 = "1.0.28"

# For faster matrix compute, include optional feature blas
# Installing blas required cmake and gfortran

ndarray = { version = "0.16.0", features = ["blas"] }
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }

ndarray-csv = "0.5.3"
ndarray-rand = "0.15.0"
rand = "0.8.5"
rand_isaac = "0.3.0"
statrs = "0.16"
either = "1.10.0"
clap = { version = "4.5.4", features = ["derive"] }
num = "0.4.2"
comfy-table = "7.1.1"
colorous = "1.0.13"
plotters = "0.3.5"
viuer = "0.7.1"
ndarray-stats = "0.6.0" # ndarray-stats = "0.5.1"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
nanoserde = "0.1.37"
thiserror = "1.0.61"
# nanoserde = { version = "0.1.37", default-features = false, features = ["binary"] }
